Fixed width of left-aligned cells in align environments

--- a/src/css/math.less
+++ b/src/css/math.less
@@ -524,6 +524,7 @@
         }
         td:nth-child(even) {
           text-align: left;
+          min-width: 50px;
         }
       }
     }
